--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@ code {
 div > svg > * {
   fill: inherit;
 }
+
+.icon.shadow > svg {
+  -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
+}
