add routing support

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   background: #333;
 }
 
+#root {
+  height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
