--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ div > svg > * {
   fill: inherit;
 }
 
-.icon.shadow > svg {
+.shadow > svg {
   -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
   filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.7));
 }
